[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Ahmad Nouh <ahmadnouh428@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
html2text = "^2024.2.26"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
